--- a/mybatis/src/main/java/oracle_url.properties
+++ b/mybatis/src/main/java/oracle_url.properties
@@ -1,3 +1,3 @@
 #name=value
-url = jdbc:oracle:thin:@localhost:1521:xe
+local = jdbc:oracle:thin:@localhost:1521:xe
 server = jdbc:oracle:thin:@www.itwill.xyz:1521:xe
